# lidar-pointcloud-augmentation

./: CMakeLists.txt  LICENSE  README.md  lidar.rviz  package.xml
launch/: augmented_slam.launch  getup.launch  show.launch  wakeup.launch
scripts/: augmentation.py  augmentation_analysis.py  decompose_pointcloud.py  decompose_ring.py
