<?xml version="1.0"?>
<package format="2">
  <name>lidar</name>
  <version>1.0.0</version>
  <description>LiDAR Point Cloud Augmentation for Mobile Robot Safe Navigation in Indoor Environment</description>
  <maintainer email="jinhong.p.noh@gmail.com">cat</maintainer>
  <license>MIT</license>
  <author email="jinhong.p.noh@gmail.com">cat</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
